--- a/node_server/index.html
+++ b/node_server/index.html
@@ -295,6 +295,8 @@ function drawLineWithAngle(x,y,length,width,angle,color){
 
 function drawPlayers(ctx)
 {
+    if(players.length>50)
+        return;
     for(var i = players.length-1; i>=0; i--)
     {
         var centerX = game2pix(players[i].x);
